--- a/views/login.edge
+++ b/views/login.edge
@@ -38,6 +38,7 @@
           
           <input type="submit" class="btn btn-primary" value="Login"/>
         </div>
+        <p style="color:red;">{{result}}</p>
       </form>
                 
                 </div>
