added photos to dashboard demo

--- a/views/dashboard.edge
+++ b/views/dashboard.edge
@@ -14,9 +14,25 @@
 
     <div class="jumbotron text-center">
             <h1>Dashboard</h1> 
-            <h3>Welcome: {{name}}</h3>
-            <h3>email: {{email}}</h3>
+            <p>Welcome: {{name}}</p>
+            <p>email: {{email}}</p>
             
+            <div class="container">
+              <div class="row">
+                  <div class="col-sm-4">
+                      <img src="/images/chart1.jpg" alt="Chart1" width="300" height="300">
+                
+                  </div>
+                  <div class="col-sm-4">
+                      <img src="/images/chart2.jpg" alt="Chart2" width="300" height="300">
+                  </div>
+                  <div class="col-sm-4">
+                      <img src="/images/chart3.jpg" alt="Chart3" width="300" height="300">
+                  </div>
+                  </div>
+              </div>
+            </div>
+           
        
             
 </div>
