--- a/views/layouts/app.edge
+++ b/views/layouts/app.edge
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Finance</title>
+  <title>User Login Demo</title>
 
 
 
@@ -77,7 +77,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top" >
     <div class="container">
-      <a class="navbar-brand" href="/">Finance</a>
+      <a class="navbar-brand" href="/">User Login Demo</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -89,17 +89,8 @@
             </a>
           </li>
 
-
-         
-            
-           <li class="nav-item">
-               <a class="nav-link" href="/auth/register">Register</a>
-           </li>
-
             @if(!auth == "")
-                  <li class="nav-item">
-                     <a class="nav-link" href="/setup">setup</a>
-                  </li>
+                
                   <li class="nav-item">
                      <a class="nav-link" href="/auth/logout">logout</a>
                   </li>
@@ -109,14 +100,7 @@
                   </li>
             @endif
 
-            
-         
-          
-        
-
-
-         
-          
+  
         </ul>
       </div>
     </div>
