--- a/views/login.edge
+++ b/views/login.edge
@@ -11,13 +11,13 @@
  <!-- Page Content -->
 
     <div class="jumbotron text-center">
-            <h1>Finance</h1> 
+            <h1>Login</h1> 
             
-            <p>Organise your personal finance with ease</p> 
+           
         <div class="container">
             <div class="row">
-                <div class="col-sm-8">Some more info or an image</div>
-                <div class="col-sm-4">
+              
+                <div class="col-md-12 col-xs-12 col-centered">
       <form action="/auth/login" method="POST">
        
         <div class="control-group">
